--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "autoprefixer": "^10.2.5",
     "axios": "^0.18.0",
     "npm": "^6.3.0",
+    "postcss-cli": "^8.3.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
+    "tailwindcss": "^2.0.3",
     "uikit": "^3.0.0-rc.8"
   },
   "scripts": {
